<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaUsuarios"
    android:background="?attr/colorSurface">

    <View
        android:id="@+id/view_cuadradoGuindoUsuario"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/svg_user"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:contentDescription="@string/icono_usuario"
        android:src="@drawable/ic_user_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/usuario"
        android:textStyle="bold"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svg_user"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/nameUserFijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/correo_de_usuario"
        android:textStyle="bold"
        android:textColor="?attr/colorSecondary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_cuadradoGuindoUsuario"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/userMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameUserFijo"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/nameContraseñaFijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contrasena"
        android:textStyle="bold"
        android:textColor="?attr/colorSecondary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userMail"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/nameContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasenasipi"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameContraseñaFijo"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/preguntaContraseña"
        android:layout_width="310dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/quieres_cambiar_tu_contrasena"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameContraseña"
        android:layout_marginTop="5dp" />



    <TextView
        android:id="@+id/textIngresePassnueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ingresa_tu_nueva_contrasena"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preguntaContraseña"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editTextNuevaPass"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:hint="@string/minimo_6_car_cteres"
        android:background="@drawable/user_edit_text_rounded"
        android:paddingLeft="15dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textIngresePassnueva"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_GuardarContra"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:background="@drawable/boton_categoria"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:text="@string/guardar_contrase_a"
        android:textSize="14sp"
        android:textColor="?attr/colorOnTertiary"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNuevaPass"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_CerrarSesion"
        android:layout_width="251dp"
        android:layout_height="74dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/cerrar_sesion"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_GuardarContra"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
