<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    tools:context=".PantallaAgregarGasto">



    <TextView
        android:id="@+id/tituloAgregarGasto"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:background="?attr/colorPrimary"
        android:text="@string/agregar_gasto_titulo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoMontoGasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/monto_del_gasto"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnTertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAgregarGasto" />

    <EditText
        android:id="@+id/editar_texto1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryContainer"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:hint="@string/ingrese_solo_numeros"
        android:textColorHint="?attr/colorOnSecondaryContainer"
        android:textColor="?attr/colorOnSecondaryContainer"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoMontoGasto" />


    <EditText
        android:id="@+id/editar_texto2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryContainer"
        android:padding="12dp"
        android:hint="@string/nota_en_que_se_gasto"
        android:textColor="?attr/colorOnSecondaryContainer"
        android:textColorHint="?attr/colorOnSecondaryContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editar_texto1"
        />
    <View
        android:id="@+id/division1"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="?attr/colorOnTertiaryContainer"
        app:layout_constraintTop_toBottomOf="@id/editar_texto2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_agregar_gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:text="@string/a_adir_gasto"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/division1" />


</androidx.constraintlayout.widget.ConstraintLayout>